add word lists and shuffle functionality

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <p>If you're wrong, we'll tell you how many letters are correct.</p>
     <button id="start">Start</button>
   </div>
+  <script src="words.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
