finish basic functionality

--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
     <button id="start">Start</button>
   </div>
   <div id="game-screen" class="hide">
-    <ul id="word-list"></div>
-    <div id="status"></div>
+    <ul id="word-list"></ul>
+    <p>Click on a word to make a guess.</p>
+    <p id="guesses-remaining"></p>
+    <p id="winner" class="hide">Congratulations! You win! <a href="./index.html">Play again?</a></p>
+    <p id="loser" class="hide">Sorry, you lost. <a href="./index.html">Play again?</a></p>
   </div>
   <script src="words.js"></script>
   <script src="app.js"></script>
