--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <p id="winner" class="hide">Congratulations! You win! <a href="./index.html">Play again?</a></p>
     <p id="loser" class="hide">Sorry, you lost. <a href="./index.html">Play again?</a></p>
   </div>
+  <script
+    src="https://code.jquery.com/jquery-3.1.1.js"
+    integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
+    crossorigin="anonymous"></script>
   <script src="words.js"></script>
   <script src="app.js"></script>
 </body>
